jcflick0.0.6 commit. 高速化チューニングとバグ修正

--- a/demo.html
+++ b/demo.html
@@ -16,8 +16,8 @@
 
 <link rel="stylesheet" href="jquery-jcflick.css" media="all" type="text/css">
 
-<script type="text/javascript" src="jquery-1.6.4.min.js"></script>
-<script type="text/javascript" src="jquery-jcflick.js"></script>
+<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="jquery-jcflick-min.js"></script>
 <script type="text/javascript">
 $(function(){
 	$('#demo').jcflick({
@@ -39,20 +39,20 @@ $(function(){
 </script>
 
 </head>
-<body onLoad="ProjectName.PARTS.hideAdBar()" onOrientationChange="ProjectName.PARTS.hideAdBar()">
+<body>
 
 	<div class="section">
 		<div id="demo">
 			<!-- flick -->
 			<div class="flickContainer"><div class="flickWrapper">
 				<div class="flickCol">
-					<p><a href="#"><img src="images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
+					<p><a href="#" class="noHighlight"><img src="images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
+					<p><a href="#" class="noHighlight"><img src="images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
+					<p><a href="#" class="noHighlight"><img src="images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
 				</div>
 			</div></div>
 			
