--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
 
 <link rel="stylesheet" href="jquery-jcflick.css" media="all" type="text/css">
 
-<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="jquery-jcflick.min.js"></script>
 <script type="text/javascript">
 $(function(){
